# MIO

./: .env.dev  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
docker/: sources.list
mio/MioCore/: __init__.py
mio/MioCore/config/: __init__.py  config.py  path.py  utils.py
mio/MioCore/core/: hook.py  log.py  permission.py  version.py
mio/MioCore/hooks/: __init__.py  bot_connect.py  custom_hooks.py
mio/MioCore/plugin_manager/: plugin_manager.py
mio/plugins/daily_news/: __init__.py  config.py
mio/plugins/heart_reply/: __init__.py  heart_reply.py
mio/plugins/help/: __init__.py  data_source.py
mio/plugins/help/template/: help.html  plugin.html
mio/plugins/manager/: __init__.py
mio/plugins/mio_ai_chat/: __init__.py  baidu_ai.py  config.py
mio/plugins/weather/: __init__.py  config.py  model.py  render_pic.py  weather.py
resources/db/: mio.sqlite3
